# parsegrid

./: .dockerignore  .env.example  .gitignore  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 14f28221067a_add_provisioning_audit_columns.py  43408dc38fa8_add_users_table.py  5d8f2c6f0b31_add_hnsw_index_for_document_chunks.py  6b739f56cf50_make_hashed_password_nullable_add_auth_.py  7a1c4e9b2d31_add_adaptive_extraction_model.py  d89bf08bddb0_add_pgvector_job_type_and_document_chunks.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: auth.py  connections.py  jobs.py  router.py  sse.py  upload.py
apps/api/app/core/: config.py  database.py  security.py  storage.py
apps/api/app/models/: base.py  job.py  user.py
apps/api/app/providers/: __init__.py  embedding_openai.py  factory.py  llm_openai.py  ocr_paddle.py  output_neo4j.py  output_postgres.py  output_vector_qdrant.py
apps/api/app/schemas/: extraction_model.py  job.py  user.py
apps/api/app/services/: ddl.py  extraction.py  profiling.py  provisioning.py  reconciliation.py
apps/api/app/worker/: callbacks.py  celery_app.py  db.py
apps/api/app/worker/tasks/: extract.py  merge.py  ocr.py  profile.py  rag.py  reconcile.py  translate.py
apps/api/tests/: test_output_neo4j.py  test_output_vector_qdrant.py
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/src/: auth.ts  middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
infrastructure/: docker-compose.yml
(+23 files in other folders)
